<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:fitsSystemWindows="true">

    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".HomePage"
        android:layout_width="match_parent"
        android:id="@+id/drawerLayout"
        android:background="#F0F8FF">
        <FrameLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:id="@+id/firstname"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:clickable="true"
                android:text="@string/head1"
                android:textSize= "16sp"
                android:textColor="#000"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:id="@+id/firsttext"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:text="@string/string1"
                android:textColor="#999"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:id="@+id/secondname"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:text="@string/head2"
                android:textColor="#000"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="175dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:id="@+id/secondtext"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:text="@string/string2"
                android:textColor="#999"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="275dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:id="@+id/thirdname"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:clickable="true"
                android:text="@string/head3"
                android:textSize= "16sp"
                android:textColor="#000" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="300dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:id="@+id/thirdtext"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:text="@string/string3"
                android:textColor="#999"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="400dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:id="@+id/fourthname"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:clickable="true"
                android:text="@string/head4"
                android:textSize= "16sp"
                android:textColor="#000" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="425dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:id="@+id/fourthtext"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:text="@string/string4"
                android:textColor="#999"/>
        </LinearLayout>

        <android.support.design.widget.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/navView"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/navigation_header"
            app:menu="@menu/navigation_menu">
        </android.support.design.widget.NavigationView>
    </android.support.v4.widget.DrawerLayout>
</RelativeLayout>
